[project]
authors = [{name = "Mark Servilla", email = "mark.servilla@gmail.com"}]
dependencies = []
name = "pvc"
requires-python = ">= 3.11"
dynamic = ["version"]

[project.scripts]
pvc = "pvc.package_version_checker:pvc"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/pvc/VERSION.txt"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.wheel]
packages = ["src/pvc"]

[tool.hatch.build.targets.sdist]
only-include = ["src/pvc"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pvc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"
pixi-pycharm = ">=0.0.10,<0.0.11"
pyyaml = ">=6.0.3,<7"
click = ">=8.3.1,<9"
daiquiri = ">=3.0.0,<4"
ruff = ">=0.14.13,<0.15"
pytest = ">=9.0.2,<10"
pip = ">=25.3,<26"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
